--- a/src/components/Networks.astro
+++ b/src/components/Networks.astro
@@ -27,10 +27,26 @@
 
 <section class="RedSocial">
   <ul>
-    <li><a href="">Facebook</a></li>
-    <li><a href="">Gmail</a></li>
-    <li><a href="">Nose</a></li>
-    <li><a href="">Nose</a></li>
+    <li>
+      <a href="">
+        <img src="/Images/Icons/facebook.svg" alt="facebook" />
+      </a>
+    </li>
+    <li>
+      <a href="">
+        <img src="/Images/Icons/gmail.svg" alt="gmail" />
+      </a>
+    </li>
+    <li>
+      <a href="">
+        <img src="/Images/Icons/facebook.svg" alt="facebook" />
+      </a>
+    </li>
+    <li>
+      <a href="">
+        <img src="/Images/Icons/facebook.svg" alt="facebook" />
+      </a>
+    </li>
   </ul>
 </section>
 
@@ -43,8 +59,11 @@
   nonce="moJIBk27"></script>
 
 <style>
+  /* body {
+    background: #d2d2d2;
+  } */
   .Facebook {
-    width: 90%;
+    width: 50%;
     margin: 0 auto;
   }
 
@@ -58,12 +77,12 @@
     li > a {
       font-weight: 700;
       padding: 10px;
-      border: 1px solid #00a352;
+      border: 1px solid #104b3e;
       border-radius: 10px;
     }
   }
   li > a:hover {
     color: #ffff;
-    background: #018a46;
+    background: #104b3e;
   }
 </style>
