--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,15 +11,15 @@
       <li><a href="">Redes Sociales</a></li>
     </ul>
     <ul class="menu-list">
-      <li><a href="">Iniciar</a></li>
-      <li><a href="">Registrar</a></li>
+      <li><a href="/Login">Iniciar</a></li>
+      <li><a href="/SingUp">Registrar</a></li>
     </ul>
   </nav>
 </header>
 
 <style>
   nav {
-    background: #00a352;
+    background: #0C231E;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,12 +31,13 @@
     justify-content: space-evenly;
     align-items: center;
 
-    li {
+    /* li {
       margin: 0 30px;
-    }
+    } */
 
     a {
       padding: 5px;
+      margin: 10px;
       cursor: pointer;
       color: #ffff;
       font-weight: 700;
@@ -44,7 +45,7 @@
 
     a:hover {
       transition: .5s ease;
-      border-bottom: 2px solid #7eff5c;  
+      border-bottom: 2px solid #104b3e;  
     }
   }
 
@@ -57,8 +58,9 @@
 
   @media (max-width: 768px) {
     .menu-list {
-      flex-wrap: wrap;
-      flex-direction: row;
+      /* flex-wrap: wrap; */
+      display: flex;
+      flex-direction: column;
       justify-content: center;
     }
   }
