--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
-import SEP from "../Images/SEP.png";
-import SEPH from "../Images/SEPH.png";
+import SEP from "../../public/Images/Icons/SEP.png";
+import SEPH from "../../public/Images/Icons/SEPH.png";
 
 interface Props {
   title: string;
@@ -16,19 +16,25 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="../../src/Images/EscuelaLogo.jpg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/Images/Icons/EscuelaLogo.jpg"
+    />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body>
     <header>
       <section id="Logos">
-        <a href="./Nose.astro">
-          <Image src={SEP} alt="SEP" class="Logo" />
-        </a>
-        <a href="">
-          <Image src={SEPH} alt="SEPH" class="Logo" />
-        </a>
+        <ul>
+          <a href="https://www.gob.mx/sep">
+            <Image src={SEP} alt="SEP" class="Logo" />
+          </a>
+          <a href="https://sep.hidalgo.gob.mx/">
+            <Image src={SEPH} alt="SEPH" class="Logo" />
+          </a>
+        </ul>
       </section>
     </header>
     <slot />
@@ -37,16 +43,27 @@ const { title } = Astro.props;
 
 <style>
   section {
-    display: flex;
+    /* display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
     padding: 10px;
-    width: 100%;
+    width: 100%; */
 
-    a > .Logo {
-      width: 30%;
-      height: 30%;
+    ul {
+      display: flex;
+      /* justify-content: space-between; */
+      align-items: center;
+      /* margin:  auto; */
+      /* padding: 10px;
+      width: 100%; */
+      a {
+        .Logo {
+          width: 30%;
+          height: 30%;
+          /* margin: 1rem; */
+        }
+      }
     }
   }
 </style>
