--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "../components/Hero.astro";
 import Carrosel from "../components/Carrosel.astro";
 import Footer from "../components/Footer.astro";
 import Networks from "../components/Networks.astro";
+import Nose from "../components/Nose.astro";
 //import Card from '../components/Card.astro';
 ---
 
@@ -13,6 +14,7 @@ import Networks from "../components/Networks.astro";
     <Carrosel />
   </main>
   <aside>
+    <!-- <Nose /> -->
     <Networks />
   </aside>
   <Footer />
