Agregar RedSocial e info

--- a/src/components/Networks.astro
+++ b/src/components/Networks.astro
@@ -3,26 +3,53 @@
 ---
 
 <section class="Facebook">
-  <div
-    class="fb-page"
-    data-href="https://www.facebook.com/SEPmx"
-    data-tabs="timeline"
-    data-width=""
-    data-height=""
-    data-small-header="false"
-    data-adapt-container-width="true"
-    data-hide-cover="false"
-    data-show-facepile="true"
-  >
-    <blockquote
-      cite="https://www.facebook.com/SEPmx"
-      class="fb-xfbml-parse-ignore"
+  <article>
+    <div
+      class="fb-page"
+      data-href="https://www.facebook.com/SEPmx"
+      data-tabs="timeline"
+      data-width=""
+      data-height=""
+      data-small-header="false"
+      data-adapt-container-width="true"
+      data-hide-cover="false"
+      data-show-facepile="true"
     >
-      <a href="https://www.facebook.com/SEPmx"
-        >Secretaría de Educación Pública</a
+      <blockquote
+        cite="https://www.facebook.com/SEPmx"
+        class="fb-xfbml-parse-ignore"
       >
-    </blockquote>
-  </div>
+        <a href="https://www.facebook.com/SEPmx"
+          >Secretaría de Educación Pública</a
+        >
+      </blockquote>
+    </div>
+  </article>
+  <br />
+  <hr />
+  <br />
+  <article>
+    <div
+      class="fb-page"
+      data-href="https://www.facebook.com/profile.php?id=61558607145376"
+      data-tabs="timeline"
+      data-width=""
+      data-height=""
+      data-small-header="false"
+      data-adapt-container-width="true"
+      data-hide-cover="false"
+      data-show-facepile="true"
+    >
+      <blockquote
+        cite="https://www.facebook.com/profile.php?id=61558607145376"
+        class="fb-xfbml-parse-ignore"
+      >
+        <a href="https://www.facebook.com/profile.php?id=61558607145376"
+          >Escuela Primaria "Profesor Francisco Cesar Morales".</a
+        >
+      </blockquote>
+    </div>
+  </article>
 </section>
 
 <section class="RedSocial">
@@ -33,12 +60,13 @@
       </a>
     </li>
     <li>
-      <a href="">
+      <a href="zacualtipan2012@gmail.com">
         <img src="/Images/Icons/gmail.svg" alt="gmail" />
       </a>
     </li>
     <li>
-      <a href="">
+      <a href="7747420589">
+        <!-- telefono -->
         <img src="/Images/Icons/facebook.svg" alt="facebook" />
       </a>
     </li>
@@ -65,6 +93,10 @@
   .Facebook {
     width: 50%;
     margin: 0 auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .RedSocial > ul {
