Visualizar ciertos cambios

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,14 +4,16 @@ import Hero from "../components/Hero.astro";
 import Carrosel from "../components/Carrosel.astro";
 import Footer from "../components/Footer.astro";
 import Networks from "../components/Networks.astro";
-import Nose from "../components/Nose.astro";
-//import Card from '../components/Card.astro';
+
+// import CarosuelCSS from "../example/CarosuelCSS.astro";
 ---
 
 <Layout title='Escuela "Franciso Cesar Morales". '>
   <main>
     <Hero />
     <Carrosel />
+    <hr>
+    <!-- <CarosuelCSS /> -->
   </main>
   <aside>
     <!-- <Nose /> -->
