--- a/src/components/Carrosel.astro
+++ b/src/components/Carrosel.astro
@@ -11,7 +11,7 @@ import Image6 from "../../public/Images/Carrusel/Image6.jpg";
 
 <section class="slider">
   <div class="slider__container container">
-    <img src="/Images/Icons/leftarrow.svg" class="slider__arrow" id="before" />
+    <!-- <img src="/Images/Icons/leftarrow.svg" class="slider__arrow" id="before" /> -->
 
     <section class="slider__body slider__body--show" data-id="1">
       <figure class="slider__picture">
@@ -49,7 +49,7 @@ import Image6 from "../../public/Images/Carrusel/Image6.jpg";
       </figure>
     </section>
 
-    <img src="/Images/Icons/rightarrow.svg" class="slider__arrow" id="next" />
+    <!-- <img src="/Images/Icons/rightarrow.svg" class="slider__arrow" id="next" /> -->
   </div>
 </section>
 
