--- a/src/components/Networks.astro
+++ b/src/components/Networks.astro
@@ -25,9 +25,9 @@
       </blockquote>
     </div>
   </article>
-  <br />
+  <!-- <br />
   <hr />
-  <br />
+  <br /> -->
   <article>
     <div
       class="fb-page"
@@ -54,7 +54,7 @@
 
 <section class="RedSocial">
   <ul>
-    <li>
+      <li>
       <a href="">
         <img src="/Images/Icons/facebook.svg" alt="facebook" />
       </a>
@@ -109,12 +109,14 @@
     li > a {
       font-weight: 700;
       padding: 10px;
-      border: 1px solid #104b3e;
-      border-radius: 10px;
+      /* border: 1px solid #104b3e;
+      border-radius: 10px; */
     }
   }
   li > a:hover {
     color: #ffff;
     background: #104b3e;
   }
+
+  
 </style>
