--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Carrosel from "../components/Carrosel.astro";
 import Footer from "../components/Footer.astro";
 import Networks from "../components/Networks.astro";
 
+// import Ne  wImages from "../example/ImagesDynamically.astro";
 // import CarosuelCSS from "../example/CarosuelCSS.astro";
 ---
 
@@ -12,7 +13,8 @@ import Networks from "../components/Networks.astro";
   <main>
     <Hero />
     <Carrosel />
-    <hr>
+    <hr />
+    <!-- <NewImages /> -->
     <!-- <CarosuelCSS /> -->
   </main>
   <aside>
@@ -21,9 +23,5 @@ import Networks from "../components/Networks.astro";
   </aside>
   <Footer />
 
-    
-  <style>
-
-  </style>
+  <style></style>
 </Layout>
-
