--- a/src/example/ImagesDynamically.astro
+++ b/src/example/ImagesDynamically.astro
@@ -4,11 +4,11 @@ import { Image } from "astro:assets";
 
 interface Props {
   imagePath: string;
-  // altText: string;
+  altText: string;
 }
 
 // , altText
-const { imagePath} = Astro.props;
+const { imagePath, altText } = Astro.props;
 const images = import.meta.glob<{ default: ImageMetadata }>(
   "/src/assets/*.{jpg,png,gif}"
 );
@@ -18,6 +18,12 @@ if (!images[imagePath])
   );
 ---
 
-<div class="card">
-  <Image src={images[imagePath]()} alt="Imagenes" />
+<div
+  class="slider__body flex items-center justify-center opacity-0 transition duration-1500 ease-in-out"
+>
+  <Image
+    src={images[imagePath]()}
+    alt={altText}
+    class="rounded-lg h-96 object-cover w-full"
+  />
 </div>
