--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
-import Carrosel from "../components/Carrosel.astro";
+import Carrosel from "../components/Carosuel/Carousel.astro";
 import Footer from "../components/Footer.astro";
-import Networks from "../components/Networks.astro";
+import Networks from "../components/Newtworks/Networks.astro";
+import IconsNewtworks from "../components/Newtworks/IconsNewtworks.astro";
+
+// import NewCarousel from "../example/NewCarousel.astro";
 
 // import Ne  wImages from "../example/ImagesDynamically.astro";
 // import CarosuelCSS from "../example/CarosuelCSS.astro";
@@ -15,11 +18,12 @@ import Networks from "../components/Networks.astro";
     <Carrosel />
     <hr />
     <!-- <NewImages /> -->
-    <!-- <CarosuelCSS /> -->
+    <!-- <NewCarousel /> -->
   </main>
   <aside>
     <!-- <Nose /> -->
     <Networks />
+    <IconsNewtworks />
   </aside>
   <Footer />
 
