Quitan y cambiar ciertos lineas incesarias

--- a/src/example/NewCarousel.astro
+++ b/src/example/NewCarousel.astro
@@ -1,5 +1,5 @@
 ---
-import NewCarousel from "../example/ImagesDynamically.astro";
+import NuevoCarousel from "../example/ImagesDynamically.astro";
 ---
 
 <section class="slider">
@@ -11,12 +11,12 @@ import NewCarousel from "../example/ImagesDynamically.astro";
     id="before"
   />
 
-  <NewCarousel imagePath="/src/assets/Image1.jpg" altText="Imagen1" />
-  <NewCarousel imagePath="/src/assets/Image2.jpg" altText="Imagen1" />
-  <NewCarousel imagePath="/src/assets/Image3.jpg" altText="Imagen1" />
-  <NewCarousel imagePath="/src/assets/Image4.jpg" altText="Imagen1" />
-  <NewCarousel imagePath="/src/assets/Image5.jpg" altText="Imagen1" />
-  <NewCarousel imagePath="/src/assets/Image6.jpg" altText="Imagen1" />
+  <NuevoCarousel imagePath="/src/assets/Image1.jpg" altText="Imagen1" />
+  <NuevoCarousel imagePath="/src/assets/Image2.jpg" altText="Imagen1" />
+  <NuevoCarousel imagePath="/src/assets/Image3.jpg" altText="Imagen1" />
+  <NuevoCarousel imagePath="/src/assets/Image4.jpg" altText="Imagen1" />
+  <NuevoCarousel imagePath="/src/assets/Image5.jpg" altText="Imagen1" />
+  <NuevoCarousel imagePath="/src/assets/Image6.jpg" altText="Imagen1" />
 
   <img
     src="/Images/Icons/rightarrow.svg"
