--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import SEP from "../../public/Images/Icons/SEP.png";
 import SEPH from "../../public/Images/Icons/SEPH.png";
-import Header from "../components/Hero.astro"
+// import Header from "../components/Hero.astro"
 
 interface Props {
   title: string;
