--- a/src/components/Newtworks/IconsNewtworks.astro
+++ b/src/components/Newtworks/IconsNewtworks.astro
@@ -1,40 +1,37 @@
-<section class="RedSocial">
-  <ul>
+---
+import Icon from "../Icon.astro"
+---
+
+<section class="RedSocial p-2">
+  <ul class="flex justify-evenly items-center">
     
     <li>
       <a href="">
-        <img src="/Images/Icons/facebook.svg" alt="facebook" />
+        <Icon imagePath="/public/Images/Icons/facebook.svg" altText="facebook"/>
       </a>
     </li>
 
     <li>
       <a href="zacualtipan2012@gmail.com">
-        <img src="/Images/Icons/facebook.svg" alt="gmail" />
+        <Icon imagePath="/public/Images/Icons/gmail.svg" altText="emial" />
       </a>
     </li>
     
     <li>
       <a href="7747420589">
         <!-- telefono -->
-        <img src="/Images/Icons/facebook.svg" alt="facebook" />
+        <!-- <Icon imagePath="" altText="" /> -->
+        <Icon imagePath="/public/Images/Icons/facebook.svg" altText="facebook"/>
       </a>
     </li>
     
     <li>
       <a href="">
-        <img src="/Images/Icons/facebook.svg" alt="facebook" />
+        <!-- <Icon imagePath="" altText="" /> -->
+        <Icon imagePath="/public/Images/Icons/facebook.svg" altText="facebook"/>
       </a>
     </li>
   
 </ul>
 </section>
 
-<style>
-  section {
-    ul {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-    }
-  }
-</style>
