--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer>
+<footer class="bg-emerald-950 text-white text-base">
   <section class="social">
     <h2>Redes Sociales - Organizaciones:</h2>
     <ul class="social-icons">
