Modificando el svg

--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -21,7 +21,7 @@ if (!images[imagePath])
   <Image
     src={images[imagePath]()}
     alt={altText}
-    class="w-8 bg-slate-50 rounded-md"
+    class="w-8 rounded-md"
     />
     
-    <!-- class="w-8 rounded-md" -->
+    <!-- class="w-8 bg-slate-50 rounded-md" -->
