--- a/src/pages/SingUp.astro
+++ b/src/pages/SingUp.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Input from "../components/Input.astro";
+import Input from "../components/Input/Input.astro";
 ---
 
 <Layout title="Esucela Primaria | Registro">
