--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Hero from "../components/Hero.astro";
+import Hero from "../components/Hero/Hero.astro";
 import Carrosel from "../components/Carosuel/Carousel.astro";
-import Footer from "../components/Footer.astro";
+import Footer from "../components/Footer/Footer.astro";
 import Networks from "../components/Newtworks/Networks.astro";
 import IconsNewtworks from "../components/Newtworks/IconsNewtworks.astro";
 ---
