--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -15,7 +15,7 @@
   </section>
   <hr class="w-11/12 m-auto content-center" />
 
-  <section class="p-2 m-auto content-center text-sm">
+  <section class="p-2 m-auto content-center text-sm text-center">
     <p>
       © Sitio Web Oficial del Escuela Primaria "Francisco Cesar Morales" de
       Zacualtipán de Ángeles, Hidalgo, México 2024.
