--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -44,7 +44,7 @@ const navItemsTwo = [
 
 <header>
   <nav class="bg-emerald-950 flex items-center justify-evenly p-2 text-white">
-    <ul class="menu-list flex justify-evenly items-center">
+    <ul class="block justify-evenly items-center sm:flex">
       {
         navItemsOne.map(({ title, alt, url, image }) => (
           <li class="m-4 font-semibold flex items-center justify-center hover:border-b-2 duration-75">
