modificar ruta del arreglo navItemsTwo

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -31,13 +31,13 @@ const navItemsTwo = [
     title: "Entrar",
     alt: "userLogin",
     url: "/Login",
-    image: "../../../public/Images/Icons/user.svg",
+    image: "/Images/Icons/user.svg",
   },
   {
     title: "Registrar",
     alt: "userCreate",
     url: "/SingUp",
-    image: "../../../public/Images/Icons/user-up.svg",
+    image: "/Images/Icons/user-up.svg",
   },
 ];
 ---
