Importando estilos de otra manera

--- a/src/components/Carosuel/Carousel.astro
+++ b/src/components/Carosuel/Carousel.astro
@@ -1,4 +1,5 @@
 ---
+import './style.css'
 import { Image } from "astro:assets";
 import Image1 from "../../../public/Images/Carrusel/Image1.jpg";
 import Image2 from "../../../public/Images/Carrusel/Image2.jpg";
@@ -54,92 +55,3 @@ import Image6 from "../../../public/Images/Carrusel/Image6.jpg";
 </section>
 
 <script src="./Carousel.js"></script>
-
-<style>
-  .container {
-    /* width: 90%; */
-    max-width: 1200px;
-    margin: 0 auto;
-    overflow: hidden;
-  }
-
-  /* .slider {
-    padding: 40px 0;
-  } */
-
-  .slider__container {
-    display: grid;
-    /* grid-template-columns: 50px 1fr 50px; */
-    grid-template-columns: 0px 1fr 0px;
-    align-items: center;
-    /* gap: 1em; */
-  }
-
-  .slider__body {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    opacity: 0;
-    pointer-events: none;
-    display: grid;
-    grid-template-columns: 1fr max-content;
-    align-items: center;
-    transition: opacity 1.5s;
-  }
-
-  .slider__body--show {
-    opacity: 1;
-    pointer-events: unset;
-  }
-
-  .slider__img {
-    width: 100%;
-    /* border-radius: 20px; */
-    height: 390px;
-    object-fit: cover;
-    display: block;
-    margin: 0 auto;
-  }
-
-  .slider__arrow {
-    cursor: pointer;
-    width: 90%;
-  }
-
-  .slider__arrow:nth-of-type(2) {
-    justify-self: end;
-  }
-
-  @media (max-width: 768px) {
-    .slider__body {
-      grid-template-columns: 1fr;
-      grid-template-rows: max-content 1fr;
-      gap: 1em;
-    }
-
-    .slider__picture {
-      grid-row: 1/2;
-    }
-
-  }
-
-  @media (max-width: 425px) {
-    .slider__container {
-      /* grid-template-columns: 25px 1fr 25px; */
-      grid-template-columns: 0px 1fr 0px;
-    }
-
-    .slider__arrow {
-      width: 100%;
-    }
-
-    .subtitle {
-      font-size: 2rem;
-      margin-bottom: 15px;
-    }
-
-    .slider__review {
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-  }
-</style>
