--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,6 @@
 import { Image } from "astro:assets";
 import SEP from "../../public/Images/Icons/SEP.png";
 import SEPH from "../../public/Images/Icons/SEPH.png";
-// import Header from "../components/Hero.astro"
-
 interface Props {
   title: string;
 }
@@ -26,37 +24,17 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <header class="header">
+    <header class="w-11/12 p-2 flex justify-between items-center m-auto">
       <a href="https://www.gob.mx/sep">
-        <Image src={SEP} alt="SEP" class="Logo" />
+        <Image src={SEP} alt="SEP" class="w-4/12 h-2/6" />
       </a>
       <a href="https://sep.hidalgo.gob.mx/">
-        <Image src={SEPH} alt="SEPH" class="Logo" />
+        <Image src={SEPH} alt="SEPH" class="w-4/12 h-2/6" />
       </a>
     </header>
-    <!-- <Header class="header" /> -->
     <slot />
   </body>
 </html>
-
-<style>
-  .header {
-    /* position: fixed;
-     width: 100%;
-    z-index: 1; */
-    width: 90%;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 10%;
-  }
-
-  .Logo {
-    width: 30%;
-    height: 30%;
-  }
-</style>
 
 <style is:global>
   * {
@@ -74,11 +52,6 @@ const { title } = Astro.props;
   body {
     min-height: 100dvh;
   }
-  /* header {
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-  } */
 
   h1,
   h2,
