--- a/src/components/Input/InputLogin.astro
+++ b/src/components/Input/InputLogin.astro
@@ -37,7 +37,7 @@ const INPUT = [
       <label class="flex p-2">
         <span class="text-base m-2 p-2">{span}</span>
         <input
-          type={type}
+          type="text"
           class="border-2 border-solid rounded focus:outline-none focus:border-emerald-950"
         />
       </label>
