Aurrina el rendimiento de la pagina

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import IconsNewtworks from "../components/Newtworks/IconsNewtworks.astro";
     <hr />
   </main>
   <aside>
-    <Networks />
+    <!-- <Networks /> -->
     <IconsNewtworks />
   </aside>
   <Footer />
