--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,7 +1,7 @@
 <footer class="bg-emerald-950 text-white text-base p-2 m-auto content-center">
   <section class="text-center p-2">
     <h2>Redes Sociales - Organizaciones:</h2>
-    <ul class="flex justify-center items-center">
+    <ul class="flex justify-evenly items-center">
       <li>
         <a class="Ancla" href="">Facebook </a>
       </li>
