--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -1,5 +1,5 @@
 ---
-const navItemsOne = [
+export const navItemsOne = [
   {
     title: "Inicio",
     alt: "Inicio",
@@ -26,7 +26,7 @@ const navItemsOne = [
   },
 ];
 
-const navItemsTwo = [
+export const navItemsTwo = [
   {
     title: "Entrar",
     alt: "userLogin",
@@ -42,29 +42,3 @@ const navItemsTwo = [
 ];
 ---
 
-<header>
-  <nav class="bg-emerald-950 flex items-center justify-evenly p-2 text-white">
-    <ul class="block justify-evenly items-center sm:flex">
-      {
-        navItemsOne.map(({ title, alt, url, image }) => (
-          <li class="m-4 font-semibold flex items-center justify-center hover:border-b-2 duration-75">
-            <img src={image} alt={alt} class="m-2" />
-            <a href={url}> {title} </a>
-          </li>
-        ))
-      }
-    </ul>
-    <ul>
-      {
-        navItemsTwo.map(({ title, alt, url, image }) => (
-          <li class="m-4 text-white cursor-pointer font-semibold flex items-center hover:border-b-2 duration-75">
-            <img src={image} alt={alt} />
-            <a href={url} class="m-2">
-              {title}
-            </a>
-          </li>
-        ))
-      }
-    </ul>
-  </nav>
-</header>
