Quitando las redes sociales por el rendimiento

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero/Hero.astro";
 import Carrosel from "../components/Carosuel/Carousel.astro";
 import Footer from "../components/Footer/Footer.astro";
-import Networks from "../components/Newtworks/Networks.astro";
+// import Networks from "../components/Newtworks/Networks.astro";
 import IconsNewtworks from "../components/Newtworks/IconsNewtworks.astro";
 ---
 
