--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,20 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero/Hero.astro";
+import Presentacion from "../components/Carosuel/Presentacion.astro";
 import Carrosel from "../components/Carosuel/Carousel.astro";
 import Footer from "../components/Footer/Footer.astro";
-// import Networks from "../components/Newtworks/Networks.astro";
 import IconsNewtworks from "../components/Newtworks/IconsNewtworks.astro";
 ---
 
 <Layout title='Escuela "Franciso Cesar Morales". '>
   <main>
     <Hero />
+    <Presentacion />
     <Carrosel />
     <hr />
   </main>
   <aside>
-    <!-- <Networks /> -->
     <IconsNewtworks />
   </aside>
   <Footer />
