--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,10 @@ import SEP from "../../public/Images/Icons/SEP.png";
 import SEPH from "../../public/Images/Icons/SEPH.png";
 import { navItemsOne } from "../components/Hero/Hero.astro";
 import { navItemsTwo } from "../components/Hero/Hero.astro";
+
+// cambiar los tipos de archivos Hero.astro a Hero.js
+// igual unir las funciones o array
+
 interface Props {
   title: string;
 }
@@ -20,7 +24,7 @@ const { title } = Astro.props;
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/Images/Icons/EscuelaLogo.jpg"
+      href="/Images/Icons/Escudo.jpg"
     />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
