Agregando Icon oficial y comando el inicio y su icono

--- a/src/components/Carosuel/Presentacion.astro
+++ b/src/components/Carosuel/Presentacion.astro
@@ -13,9 +13,9 @@
 
 -->
 <section
-  class="w-full h-svh bg-[url('/Images/Carrusel/Image4.jpg')] bg-cover bg-repeat-none bg-size p-4 mb-4"
+  class="w-full h-svh bg-[url('/Images/Carrusel/Image4.jpg')] bg-cover bg-repeat-none bg-size bg-center p-4 mb-4"
 >
-  <article class="text-white text-base font-semibold">
+  <article class="text-black text-xl font-bold ">
     <h2>Lorem ipsum dolor sit amet.</h2>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus eum
