--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,7 @@
 import { Image } from "astro:assets";
 import SEP from "../../public/Images/Icons/SEP.png";
 import SEPH from "../../public/Images/Icons/SEPH.png";
-import { navItemsOne } from "../components/Hero/Hero.astro";
-import { navItemsTwo } from "../components/Hero/Hero.astro";
+import { navItemsOne, navItemsTwo } from "../components/Hero/Hero.astro";
 interface Props {
   title: string;
 }
@@ -20,7 +19,7 @@ const { title } = Astro.props;
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/Images/Icons/EscuelaLogo.jpg"
+      href="/Images/Icons/Icon.png"
     />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
