Cambios de fondo

--- a/src/components/Carosuel/Carousel.astro
+++ b/src/components/Carosuel/Carousel.astro
@@ -10,7 +10,7 @@ import Image6 from "../../../public/Images/Carrusel/Image6.jpg";
 
 ---
 
-<section class="slider">
+<section class="slider w-full">
   <div class="slider__container container">
     <img src="/Images/Icons/leftarrow.svg" class="slider__arrow" id="before" />
 
