--- a/src/components/Carosuel/Presentacion.astro
+++ b/src/components/Carosuel/Presentacion.astro
@@ -10,17 +10,34 @@
     background-size: cover;
     background-position: center center;
     "
+    
+    class="w-full h-svh bg-[url('/Images/Carrusel/Image4.jpg')] bg-cover bg-repeat-none bg-size bg-center p-4 mb-4"
 
--->
-<section
-  class="w-full h-svh bg-[url('/Images/Carrusel/Image4.jpg')] bg-cover bg-repeat-none bg-size bg-center p-4 mb-4"
->
-  <article class="text-black text-xl font-bold ">
-    <h2>Lorem ipsum dolor sit amet.</h2>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus eum
-      ipsam consequatur facere molestiae voluptas unde asperiores nisi mollitia
-      et, ipsum amet! Hic, illum porro inventore tempore non sed id!
+    -->
+<section class="Presentacion h-svh mb-4">
+  <article class="text-white text-xl font-bold p-4 ">
+    <h2 class=" text-4xl m-4 text-center"> ¡¡ Bienvenidos !!</h2>
+    <p class="m-auto text-pretty">
+      El centro de trabajo (CCT) <strong>13DPR0568C</strong> opera en el ambito <strong
+        >Urbano</strong
+      > desde el año <strong>1944</strong>
+      con una antiguedad de <strong>Mas de 50 Años</strong> dispone de 18 o mas aulas
+      repartidas en mas de 10 edificios. El centro de cuenta con internet. El reporte
+      mas reciente corresponde al año 2014.
     </p>
   </article>
 </section>
+
+<style>
+  .Presentacion {
+    width: 100%;
+    padding: 5px;
+    object-position: center;
+    background-image: linear-gradient(0deg,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)), url(/Images/Carrusel/Image4V2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+</style>
