--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,3 +1,7 @@
+---
+import Domicilio from "./Domicilio.astro"
+---
+
 <footer class="bg-emerald-950 text-white text-base p-2 m-auto content-center">
   <section class="text-center p-2">
     <h2>Redes Sociales - Organizaciones:</h2>
@@ -14,6 +18,8 @@
     </ul>
   </section>
   <hr class="w-11/12 m-auto content-center" />
+
+  <Domicilio />
 
   <section class="p-2 m-auto content-center text-sm text-center">
     <p>
