Cambiar tipo de archivo

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import SEP from "../../public/Images/Icons/SEP.png";
 import SEPH from "../../public/Images/Icons/SEPH.png";
-import { navItemsOne, navItemsTwo } from "../components/Hero/Hero.astro";
+import { navItemsOne, navItemsTwo } from "../components/Hero/Hero.js";
 
 interface Props {
   title: string;
