--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,5 +1,7 @@
 ---
 import Domicilio from "./Domicilio.astro"
+
+const currentYear = new Date().getFullYear()
 ---
 
 <footer class="bg-emerald-950 text-white text-base p-2 m-auto content-center">
@@ -23,8 +25,8 @@ import Domicilio from "./Domicilio.astro"
 
   <section class="p-2 m-auto content-center text-sm text-center">
     <p>
-      © Sitio Web Oficial del Escuela Primaria "Francisco Cesar Morales" de
-      Zacualtipán de Ángeles, Hidalgo, México 2024.
+      © {currentYear} - Sitio Web Oficial del Escuela Primaria "Francisco Cesar Morales" de
+      Zacualtipán de Ángeles, Hidalgo, México.
     </p>
   </section>
 </footer>
