Add new components POST

--- a/src/components/Newtworks/IconsNewtworks.astro
+++ b/src/components/Newtworks/IconsNewtworks.astro
@@ -1,37 +1,48 @@
 ---
-import Icon from "../ComponentsIcons/Icon.astro"
+import Icon from "../ComponentsIcons/Icon.astro";
 ---
 
 <section class="RedSocial p-2">
-  <ul class="flex justify-evenly items-center">
-    
+  <h2 class="text-center m-2 text-2xl">Redes Sociales - Organizaciones:</h2>
+  <ul class="flex justify-evenly items-center m-2">
     <li>
-      <a href="">
-        <Icon imagePath="/public/Images/Icons/facebook.svg" altText="facebook"/>
+      <a
+        href="https://www.facebook.com/people/Esc-Primaria-Prof-Francisco-C%C3%A9sar-Morales/61558607145376/"
+      >
+        <Icon
+          imagePath="/public/Images/Icons/facebook.svg"
+          altText="facebook"
+        />
       </a>
     </li>
 
     <li>
-      <a href="zacualtipan2012@gmail.com">
+      <!-- <a href="zacualtipan2012@gmail.com"> -->
+      <a
+        href="https://mail.google.com/mail/u/0/?pli=1#inbox?compose=DmwnWtVcKBbFsTHTKWktrdWJdnrjTmSQcsHjLZCKTTCsTGQDVsbBBBLmtRJrdFffTrWKNxGhNfJb"
+      >
         <Icon imagePath="/public/Images/Icons/gmail.svg" altText="emial" />
       </a>
     </li>
-    
+
     <li>
       <a href="7747420589">
-        <!-- telefono -->
-        <!-- <Icon imagePath="" altText="" /> -->
-        <Icon imagePath="/public/Images/Icons/facebook.svg" altText="facebook"/>
+        <Icon
+          imagePath="/public/Images/Icons/phone-call.svg"
+          altText="telefono"
+        />
       </a>
     </li>
-    
-    <li>
-      <a href="">
-        <!-- <Icon imagePath="" altText="" /> -->
-        <Icon imagePath="/public/Images/Icons/facebook.svg" altText="facebook"/>
-      </a>
-    </li>
-  
-</ul>
-</section>
 
+    <li>
+      <a
+        href="https://www.facebook.com/people/Esc-Primaria-Prof-Francisco-C%C3%A9sar-Morales/61558607145376/"
+      >
+        <Icon
+          imagePath="/public/Images/Icons/facebook.svg"
+          altText="facebook"
+        />
+      </a>
+    </li>
+  </ul>
+</section>
