--- a/src/components/CardTeacher/LogicCard.astro
+++ b/src/components/CardTeacher/LogicCard.astro
@@ -6,7 +6,7 @@ import { DOCENTES } from "./Docentes.js";
 <section class="m-2 grid grid-cols-2 sm:grid-cols-4">
   {
     DOCENTES.map(({ Nombre, cargo, image, alt }) => (
-      <article class="border-4 rounded-lg border-gren-950 m-2 p-2 bg-emerald-950 hover:bg-emerald-800">
+      <article class="border-4 rounded-lg border-green-950 m-2 p-2 bg-emerald-950 hover:bg-emerald-800">
         <div class="flex m-2 text-white/95">
           <img src={image} alt={alt} />
           <h3 class="m-2">{Nombre}</h3>
