--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,32 +1,18 @@
 ---
-import Domicilio from "./Domicilio.astro"
+import Domicilio from "./Domicilio.astro";
 
-const currentYear = new Date().getFullYear()
+const currentYear = new Date().getFullYear();
 ---
 
-<footer class="bg-emerald-950 text-white text-base p-2 m-auto content-center">
-  <section class="text-center p-2">
-    <h2>Redes Sociales - Organizaciones:</h2>
-    <ul class="flex justify-evenly items-center">
-      <li>
-        <a class="Ancla" href="">Facebook </a>
-      </li>
-      <li>
-        <a class="Ancla" href="">Telefono </a>
-      </li>
-      <li>
-        <a class="Ancla" href="">Gmail </a>
-      </li>
-    </ul>
-  </section>
-  <hr class="w-11/12 m-auto content-center" />
+<footer class="bg-emerald-950 text-white text-base p-4 m-auto content-center">
+  <!-- <hr class="w-11/12 m-auto content-center" /> -->
 
   <Domicilio />
 
   <section class="p-2 m-auto content-center text-sm text-center">
     <p>
-      © {currentYear} - Sitio Web Oficial del Escuela Primaria "Francisco Cesar Morales" de
-      Zacualtipán de Ángeles, Hidalgo, México.
+      © {currentYear} - Sitio Web Oficial del Escuela Primaria "Francisco Cesar
+      Morales" de Zacualtipán de Ángeles, Hidalgo, México.
     </p>
   </section>
 </footer>
