--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Presentacion from "../components/Carosuel/Presentacion.astro";
 import Carrosel from "../components/Carosuel/Carousel.astro";
+import Posts from "../components/Newtworks/Posts.astro";
 import Docente from "../components/CardTeacher/LogicCard.astro";
 import Footer from "../components/Footer/Footer.astro";
 import IconsNewtworks from "../components/Newtworks/IconsNewtworks.astro";
@@ -11,6 +12,7 @@ import IconsNewtworks from "../components/Newtworks/IconsNewtworks.astro";
   <main>
     <Presentacion />
     <Carrosel />
+    <Posts />
     <Docente />
     <hr />
   </main>
