Modificando la logica de entrar

--- a/src/components/Input/InputSing.astro
+++ b/src/components/Input/InputSing.astro
@@ -7,14 +7,14 @@ import Submit from "./Submit.astro";
   class="w-11/12 m-auto p-2 rounded-lg border-2 border-solid border-emerald-950 sm:w-6/12 mt-4"
 >
   <label class="flex p-2">
-    <span class="text-base m-2 p-2">Nombre del alumno:</span>
+    <span class="text-base m-2 p-2">CURP</span>
     <input
       type="text"
       class="border-2 border-solid rounded focus:outline-none focus:border-emerald-950"
     />
   </label>
   <label class="flex p-2">
-    <span class="text-base m-2 p-2">Nombre del tutor:</span>
+    <span class="text-base m-2 p-2">Contraseña</span>
     <input
       type="text"
       class="border-2 border-solid rounded focus:outline-none focus:border-emerald-950"
