Correciones de accesibilidad

--- a/src/components/Carosuel/Carousel.astro
+++ b/src/components/Carosuel/Carousel.astro
@@ -12,7 +12,7 @@ import Image6 from "../../../public/Images/Carrusel/Image6.jpg";
 
 <section class="slider w-full">
   <div class="slider__container container">
-    <img src="/Images/Icons/leftarrow.svg" class="slider__arrow" id="before" />
+    <img src="/Images/Icons/leftarrow.svg" class="slider__arrow" id="before" alt="left" />
 
     <section class="slider__body slider__body--show" data-id="1">
       <figure class="slider__picture">
@@ -50,7 +50,7 @@ import Image6 from "../../../public/Images/Carrusel/Image6.jpg";
       </figure>
     </section>
 
-    <img src="/Images/Icons/rightarrow.svg" class="slider__arrow" id="next" />
+    <img src="/Images/Icons/rightarrow.svg" class="slider__arrow" id="next" alt="right" />
   </div>
 </section>
 
